--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link" href="about.html" target="_blank">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
